decaf_PA1A/bin/decaf/frontend/Parser.output
   0  $accept : Program $end

   1  Program : ClassList

   2  ClassList : ClassList ClassDef
   3            | ClassDef

   4  VariableDef : Variable ';'

   5  Variable : Type IDENTIFIER

   6  Type : INT
   7       | VOID
   8       | BOOL
   9       | STRING
  10       | CLASS IDENTIFIER
  11       | Type '[' ']'

  12  ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' FieldList '}'

  13  SealedOpt : SEALED
  14            |

  15  ExtendsClause : EXTENDS IDENTIFIER
  16                |

  17  FieldList : FieldList VariableDef
  18            | FieldList FunctionDef
  19            |

  20  Formals : VariableList
  21          |

  22  VariableList : VariableList ',' Variable
  23               | Variable

  24  FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock
  25              | Type IDENTIFIER '(' Formals ')' StmtBlock

  26  StmtBlock : '{' StmtList '}'

  27  StmtList : StmtList Stmt
  28           |

  29  Stmt : VariableDef
  30       | SimpleStmt ';'
  31       | IfStmt
  32       | WhileStmt
  33       | ForStmt
  34       | ReturnStmt ';'
  35       | PrintStmt ';'
  36       | BreakStmt ';'
  37       | StmtBlock
  38       | OCStmt ';'
  39       | GuardedStmt
  40       | ForeachStmt

  41  ForeachStmt : FOREACH '(' BoundVariable IN Expr whileExpr ')' Stmt

  42  BoundVariable : VAR IDENTIFIER
  43                | Type IDENTIFIER

  44  whileExpr : WHILE Expr
  45            |

  46  GuardedStmt : IF '{' GuardedCont '}'

  47  GuardedCont : IfBranchs IfSubStmt
  48              |

  49  IfBranchs : IfBranchs IfBranch
  50            |

  51  IfBranch : IfSubStmt TOR

  52  IfSubStmt : Expr ':' Stmt

  53  OCStmt : SCOPY '(' IDENTIFIER ',' Expr ')'

  54  SimpleStmt : LValue '=' Expr
  55             | Call
  56             |

  57  Receiver : Expr '.'
  58           |

  59  LValue : Receiver IDENTIFIER
  60         | Expr '[' Expr ']'
  61         | VAR IDENTIFIER

  62  Call : Receiver IDENTIFIER '(' Actuals ')'

  63  Expr : LValue
  64       | Call
  65       | Constant
  66       | Expr DADD Expr
  67       | Expr DMOD Expr
  68       | Expr '+' Expr
  69       | Expr '-' Expr
  70       | Expr '*' Expr
  71       | Expr '/' Expr
  72       | Expr '%' Expr
  73       | Expr EQUAL Expr
  74       | Expr NOT_EQUAL Expr
  75       | Expr '<' Expr
  76       | Expr '>' Expr
  77       | Expr LESS_EQUAL Expr
  78       | Expr GREATER_EQUAL Expr
  79       | Expr AND Expr
  80       | Expr OR Expr
  81       | '(' Expr ')'
  82       | '-' Expr
  83       | '!' Expr
  84       | READ_INTEGER '(' ')'
  85       | READ_LINE '(' ')'
  86       | THIS
  87       | NEW IDENTIFIER '(' ')'
  88       | NEW Type '[' Expr ']'
  89       | INSTANCEOF '(' Expr ',' IDENTIFIER ')'
  90       | '(' CLASS IDENTIFIER ')' Expr
  91       | Expr '[' Expr ':' Expr ']'
  92       | Expr '[' Expr ']' DEFAULT Expr
  93       | '[' Expr FOR IDENTIFIER IN Expr IfExpr ']'

  94  IfExpr : IF Expr

  95  $$1 :

  96  IfExpr : $$1

  97  Constant : LITERAL
  98           | NULL
  99           | ArrayConstant

 100  ArrayConstant : '[' Constants ']'
 101                | '[' ']'

 102  Constants : Constants ',' Constant
 103            | Constant

 104  Actuals : ExprList
 105          |

 106  ExprList : ExprList ',' Expr
 107           | Expr

 108  WhileStmt : WHILE '(' Expr ')' Stmt

 109  ForStmt : FOR '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt

 110  BreakStmt : BREAK

 111  IfStmt : IF '(' Expr ')' Stmt ElseClause

 112  ElseClause : ELSE Stmt
 113             |

 114  ReturnStmt : RETURN Expr
 115             | RETURN

 116  PrintStmt : PRINT '(' ExprList ')'

state 0
	$accept : . Program $end  (0)
	SealedOpt : .  (14)

	SEALED  shift 1
	CLASS  reduce 14

	Program  goto 2
	ClassList  goto 3
	ClassDef  goto 4
	SealedOpt  goto 5


state 1
	SealedOpt : SEALED .  (13)

	.  reduce 13


state 2
	$accept : Program . $end  (0)

	$end  accept


state 3
	Program : ClassList .  (1)
	ClassList : ClassList . ClassDef  (2)
	SealedOpt : .  (14)

	SEALED  shift 1
	$end  reduce 1
	CLASS  reduce 14

	ClassDef  goto 6
	SealedOpt  goto 5


state 4
	ClassList : ClassDef .  (3)

	.  reduce 3


state 5
	ClassDef : SealedOpt . CLASS IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	CLASS  shift 7
	.  error


state 6
	ClassList : ClassList ClassDef .  (2)

	.  reduce 2


state 7
	ClassDef : SealedOpt CLASS . IDENTIFIER ExtendsClause '{' FieldList '}'  (12)

	IDENTIFIER  shift 8
	.  error


state 8
	ClassDef : SealedOpt CLASS IDENTIFIER . ExtendsClause '{' FieldList '}'  (12)
	ExtendsClause : .  (16)

	EXTENDS  shift 9
	'{'  reduce 16

	ExtendsClause  goto 10


state 9
	ExtendsClause : EXTENDS . IDENTIFIER  (15)

	IDENTIFIER  shift 11
	.  error


state 10
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause . '{' FieldList '}'  (12)

	'{'  shift 12
	.  error


state 11
	ExtendsClause : EXTENDS IDENTIFIER .  (15)

	.  reduce 15


state 12
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' . FieldList '}'  (12)
	FieldList : .  (19)

	.  reduce 19

	FieldList  goto 13


state 13
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' FieldList . '}'  (12)
	FieldList : FieldList . VariableDef  (17)
	FieldList : FieldList . FunctionDef  (18)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	STATIC  shift 19
	'}'  shift 20
	.  error

	VariableDef  goto 21
	Variable  goto 22
	Type  goto 23
	FunctionDef  goto 24


state 14
	Type : VOID .  (7)

	.  reduce 7


state 15
	Type : BOOL .  (8)

	.  reduce 8


state 16
	Type : INT .  (6)

	.  reduce 6


state 17
	Type : STRING .  (9)

	.  reduce 9


state 18
	Type : CLASS . IDENTIFIER  (10)

	IDENTIFIER  shift 25
	.  error


state 19
	FunctionDef : STATIC . Type IDENTIFIER '(' Formals ')' StmtBlock  (24)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	.  error

	Type  goto 26


state 20
	ClassDef : SealedOpt CLASS IDENTIFIER ExtendsClause '{' FieldList '}' .  (12)

	.  reduce 12


state 21
	FieldList : FieldList VariableDef .  (17)

	.  reduce 17


state 22
	VariableDef : Variable . ';'  (4)

	';'  shift 27
	.  error


state 23
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)
	FunctionDef : Type . IDENTIFIER '(' Formals ')' StmtBlock  (25)

	IDENTIFIER  shift 28
	'['  shift 29
	.  error


state 24
	FieldList : FieldList FunctionDef .  (18)

	.  reduce 18


state 25
	Type : CLASS IDENTIFIER .  (10)

	.  reduce 10


state 26
	Type : Type . '[' ']'  (11)
	FunctionDef : STATIC Type . IDENTIFIER '(' Formals ')' StmtBlock  (24)

	IDENTIFIER  shift 30
	'['  shift 29
	.  error


state 27
	VariableDef : Variable ';' .  (4)

	.  reduce 4


state 28
	Variable : Type IDENTIFIER .  (5)
	FunctionDef : Type IDENTIFIER . '(' Formals ')' StmtBlock  (25)

	'('  shift 31
	';'  reduce 5


state 29
	Type : Type '[' . ']'  (11)

	']'  shift 32
	.  error


state 30
	FunctionDef : STATIC Type IDENTIFIER . '(' Formals ')' StmtBlock  (24)

	'('  shift 33
	.  error


state 31
	FunctionDef : Type IDENTIFIER '(' . Formals ')' StmtBlock  (25)
	Formals : .  (21)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	')'  reduce 21

	Variable  goto 34
	Type  goto 35
	Formals  goto 36
	VariableList  goto 37


state 32
	Type : Type '[' ']' .  (11)

	.  reduce 11


state 33
	FunctionDef : STATIC Type IDENTIFIER '(' . Formals ')' StmtBlock  (24)
	Formals : .  (21)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	')'  reduce 21

	Variable  goto 34
	Type  goto 35
	Formals  goto 38
	VariableList  goto 37


state 34
	VariableList : Variable .  (23)

	.  reduce 23


state 35
	Variable : Type . IDENTIFIER  (5)
	Type : Type . '[' ']'  (11)

	IDENTIFIER  shift 39
	'['  shift 29
	.  error


state 36
	FunctionDef : Type IDENTIFIER '(' Formals . ')' StmtBlock  (25)

	')'  shift 40
	.  error


state 37
	Formals : VariableList .  (20)
	VariableList : VariableList . ',' Variable  (22)

	','  shift 41
	')'  reduce 20


state 38
	FunctionDef : STATIC Type IDENTIFIER '(' Formals . ')' StmtBlock  (24)

	')'  shift 42
	.  error


state 39
	Variable : Type IDENTIFIER .  (5)

	.  reduce 5


state 40
	FunctionDef : Type IDENTIFIER '(' Formals ')' . StmtBlock  (25)

	'{'  shift 43
	.  error

	StmtBlock  goto 44


state 41
	VariableList : VariableList ',' . Variable  (22)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	.  error

	Variable  goto 45
	Type  goto 35


state 42
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' . StmtBlock  (24)

	'{'  shift 43
	.  error

	StmtBlock  goto 46


state 43
	StmtBlock : '{' . StmtList '}'  (26)
	StmtList : .  (28)

	.  reduce 28

	StmtList  goto 47


state 44
	FunctionDef : Type IDENTIFIER '(' Formals ')' StmtBlock .  (25)

	.  reduce 25


state 45
	VariableList : VariableList ',' Variable .  (22)

	.  reduce 22


state 46
	FunctionDef : STATIC Type IDENTIFIER '(' Formals ')' StmtBlock .  (24)

	.  reduce 24


state 47
	StmtBlock : '{' StmtList . '}'  (26)
	StmtList : StmtList . Stmt  (27)
	SimpleStmt : .  (56)
	Receiver : .  (58)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	NULL  shift 48
	THIS  shift 49
	WHILE  shift 50
	FOR  shift 51
	IF  shift 52
	RETURN  shift 53
	BREAK  shift 54
	NEW  shift 55
	PRINT  shift 56
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	'{'  shift 43
	'}'  shift 65
	SCOPY  shift 66
	VAR  shift 67
	FOREACH  shift 68
	IDENTIFIER  reduce 58
	';'  reduce 56

	VariableDef  goto 69
	Variable  goto 22
	Type  goto 35
	StmtBlock  goto 70
	Stmt  goto 71
	SimpleStmt  goto 72
	IfStmt  goto 73
	WhileStmt  goto 74
	ForStmt  goto 75
	ReturnStmt  goto 76
	PrintStmt  goto 77
	BreakStmt  goto 78
	OCStmt  goto 79
	GuardedStmt  goto 80
	ForeachStmt  goto 81
	Expr  goto 82
	LValue  goto 83
	Call  goto 84
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 48
	Constant : NULL .  (98)

	.  reduce 98


state 49
	Expr : THIS .  (86)

	.  reduce 86


state 50
	WhileStmt : WHILE . '(' Expr ')' Stmt  (108)

	'('  shift 88
	.  error


state 51
	ForStmt : FOR . '(' SimpleStmt ';' Expr ';' SimpleStmt ')' Stmt  (109)

	'('  shift 89
	.  error


state 52
	GuardedStmt : IF . '{' GuardedCont '}'  (46)
	IfStmt : IF . '(' Expr ')' Stmt ElseClause  (111)

	'('  shift 90
	'{'  shift 91
	.  error


state 53
	ReturnStmt : RETURN . Expr  (114)
	ReturnStmt : RETURN .  (115)
	Receiver : .  (58)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 58
	';'  reduce 115

	Expr  goto 92
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 54
	BreakStmt : BREAK .  (110)

	.  reduce 110


state 55
	Expr : NEW . IDENTIFIER '(' ')'  (87)
	Expr : NEW . Type '[' Expr ']'  (88)

	VOID  shift 14
	BOOL  shift 15
	INT  shift 16
	STRING  shift 17
	CLASS  shift 18
	IDENTIFIER  shift 95
	.  error

	Type  goto 96


state 56
	PrintStmt : PRINT . '(' ExprList ')'  (116)

	'('  shift 97
	.  error


state 57
	Expr : READ_INTEGER . '(' ')'  (84)

	'('  shift 98
	.  error


state 58
	Expr : READ_LINE . '(' ')'  (85)

	'('  shift 99
	.  error


state 59
	Constant : LITERAL .  (97)

	.  reduce 97


state 60
	Expr : INSTANCEOF . '(' Expr ',' IDENTIFIER ')'  (89)

	'('  shift 100
	.  error


state 61
	Expr : '-' . Expr  (82)
	Receiver : .  (58)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 58

	Expr  goto 101
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 62
	Expr : '!' . Expr  (83)
	Receiver : .  (58)

	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 58

	Expr  goto 102
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 63
	Expr : '(' . Expr ')'  (81)
	Expr : '(' . CLASS IDENTIFIER ')' Expr  (90)
	Receiver : .  (58)

	CLASS  shift 103
	NULL  shift 48
	THIS  shift 49
	NEW  shift 55
	READ_INTEGER  shift 57
	READ_LINE  shift 58
	LITERAL  shift 59
	INSTANCEOF  shift 60
	'-'  shift 61
	'!'  shift 62
	'('  shift 63
	'['  shift 64
	VAR  shift 67
	IDENTIFIER  reduce 58

	Expr  goto 104
	LValue  goto 93
	Call  goto 94
	Receiver  goto 85
	Constant  goto 86
	ArrayConstant  goto 87


state 64
